--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -69,6 +69,11 @@ dynamic_inputs:
 - - imerg_precipitation
 - - cpc_precipitation
 forecast_inputs:
+- hres_surface_net_solar_radiation
+- hres_surface_net_thermal_radiation
+- hres_surface_pressure
+- hres_temperature_2m
+- hres_total_precipitation
 - graphcast_temperature_2m
 - graphcast_total_precipitation
 - graphcast_u_component_of_wind_10m
