--- a/config/multimet_handoff_forecast_lstm.yml
+++ b/config/multimet_handoff_forecast_lstm.yml
@@ -39,19 +39,19 @@ validation_start_date: 01/10/2017
 test_end_date: 30/09/2022
 test_start_date: 01/10/2017
 
-targets_data_dir: ~/neuralhydrology/data/Caravan-nc
-statics_data_dir: ~/neuralhydrology/data/Caravan-nc
-forecasts_data_dir: ~/neuralhydrology/data/Caravan-multimet
-hindcasts_data_dir: ~/neuralhydrology/data/Caravan-multimet
+targets_data_dir: ~/neuralhydrology/data/Caravan-nc # Point to your local path. Must be read locally.
+statics_data_dir: ~/neuralhydrology/data/Caravan-nc # Point to your local path. Must be read locally.
+forecasts_data_dir: ~/neuralhydrology/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
+hindcasts_data_dir: ~/neuralhydrology/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
 
 dataset: multimet
 seq_length: 365
 lead_time: 7
 dynamic_inputs:
-# - - graphcast_temperature_2m
-#   - graphcast_total_precipitation
-#   - graphcast_u_component_of_wind_10m
-#   - graphcast_v_component_of_wind_10m
+- - graphcast_temperature_2m
+  - graphcast_total_precipitation
+  - graphcast_u_component_of_wind_10m
+  - graphcast_v_component_of_wind_10m
 - - era5land_dewpoint_temperature_2m
   - era5land_potential_evaporation_FAO_PENMAN_MONTEITH
   - era5land_snow_depth_water_equivalent
@@ -95,11 +95,15 @@ hindcast_inputs:
 static_attributes:
 - area
 - p_mean
-# - pet_mean
-# - aridity
+- pet_mean_ERA5_LAND
+- pet_mean_FAO_PM
+- aridity_ERA5_LAND
+- aridity_FAO_PM
 - frac_snow
-# - moisture_index
-# - seasonality
+- moisture_index_ERA5_LAND
+- moisture_index_FAO_PM
+- seasonality_ERA5_LAND
+- seasonality_FAO_PM
 - high_prec_freq
 - high_prec_dur
 - low_prec_freq
@@ -114,9 +118,9 @@ target_variables:
 
 # --- Model Parameters ----------------------------------------------------------
 model: handoff_forecast_lstm
-forecast_overlap: 0
+forecast_overlap: 10
 head: regression
-hidden_size: 256
+hidden_size: 128
 initial_forget_bias: 3
 output_activation: linear
 output_dropout: 0.4
@@ -127,15 +131,31 @@ state_handoff_network:
   activation: tanh
   dropout: 0.0
   hiddens:
-    - 128
+    - 30
+    - 20
+    - 64
 
 statics_embedding:
   type: fc
+  # define number of neurons per layer in the FC network used as embedding network
   hiddens:
-    - 100
-    - 100
+    - 30
     - 20
+    - 64
+  # activation function of embedding network
   activation: tanh
+  # dropout applied to embedding network
   dropout: 0.0
 
+# define embedding network for dynamic inputs
 dynamics_embedding:
+  type: fc
+  # define number of neurons per layer in the FC network used as embedding network
+  hiddens:
+    - 30
+    - 20
+    - 64
+  # activation function of embedding network
+  activation: tanh
+  # dropout applied to embedding network
+  dropout: 0.0
