Add log_n_figures to create images for the training process

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -22,6 +22,7 @@ optimizer: Adam
 validate_every: 1
 validate_n_random_basins: 10
 predict_last_n: 8
+log_n_figures: 3
 
 # --- Dataset Parameters --------------------------------------------------------
 train_basin_file: ~/neuralhydrology/config/caravan_3_basins.txt
