--- a/config/multimet_handoff_forecast_lstm.yml
+++ b/config/multimet_handoff_forecast_lstm.yml
@@ -39,10 +39,10 @@ validation_start_date: 01/10/2017
 test_end_date: 30/09/2022
 test_start_date: 01/10/2017
 
-targets_data_dir: ~/neuralhydrology/data/Caravan-nc # Point to your local path. Must be read locally.
-statics_data_dir: ~/neuralhydrology/data/Caravan-nc # Point to your local path. Must be read locally.
-forecasts_data_dir: ~/neuralhydrology/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
-hindcasts_data_dir: ~/neuralhydrology/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
+targets_data_dir: ~/nh-data/data/Caravan-nc # Point to your local path. Must be read locally.
+statics_data_dir: ~/nh-data/data/Caravan-nc # Point to your local path. Must be read locally.
+forecasts_data_dir: ~/nh-data/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
+hindcasts_data_dir: ~/nh-data/data/Caravan-multimet  # Can read directly from the Cloud bucket, if you have cloud access.
 
 dataset: multimet
 seq_length: 365
@@ -125,7 +125,7 @@ initial_forget_bias: 3
 output_activation: linear
 output_dropout: 0.4
 timestep_counter: False
-run_dir: ~/neuralhydrology/runs
+run_dir: ~/nh-data/runs
 
 state_handoff_network:
   activation: tanh
