Add comment about num_workers: 0

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -19,7 +19,7 @@ metrics:
 - Beta-KGE
 - Peak-Timing
 - Missed-Peaks
-num_workers: 0
+num_workers: 0  # Scalene profiler works only without multiprocessing (`0`)
 optimizer: Adam
 validate_every: 5
 validate_n_random_basins: 10
