Add logging level control via config.

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -1,3 +1,4 @@
+logging_level: DEBUG
 # --- Training Parameters -------------------------------------------------------
 batch_size: 256
 epochs: 20
