--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -1,7 +1,7 @@
-logging_level: DEBUG
+logging_level: INFO
 # --- Training Parameters -------------------------------------------------------
 batch_size: 256
-epochs: 20
+epochs: 30
 experiment_name: mean_embedding_forecast_lstm
 clip_gradient_norm: 1
 clip_targets_to_zero:
@@ -11,7 +11,7 @@ learning_rate:
   10: 0.0005
   25: 0.0001
 # max_updates_per_epoch:
-max_updates_per_epoch: 10
+max_updates_per_epoch: 100
 metrics:
 - NSE
 - KGE
@@ -32,18 +32,22 @@ log_n_figures: 5
 # validation_basin_file: ~/neuralhydrology/config/basins/caravan_3_basins.txt
 # test_basin_file: ~/neuralhydrology/config/basins/caravan_3_basins.txt
 
-train_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
-validation_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
-test_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
+# train_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
+# validation_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
+# test_basin_file: ~/neuralhydrology/config/basins/intersections/50_0.txt
+
+train_basin_file: ~/neuralhydrology/config/basins/caravan/camels.txt
+validation_basin_file: ~/neuralhydrology/config/basins/caravan/camels.txt
+test_basin_file: ~/neuralhydrology/config/basins/caravan/camels.txt
 
 # train_basin_file: ~/neuralhydrology/config/basins/intersections/0_0.txt
 # validation_basin_file: ~/neuralhydrology/config/basins/intersections/0_0.txt
 # test_basin_file: ~/neuralhydrology/config/basins/intersections/0_0.txt
 
-train_end_date: 30/09/2020
-train_start_date: 01/10/2010
-validation_end_date: 30/09/2022
-validation_start_date: 01/10/2020
+train_end_date: 30/09/2012
+train_start_date: 01/10/2000
+validation_end_date: 30/09/2014
+validation_start_date: 01/10/2012
 test_end_date: 30/09/2022
 test_start_date: 01/10/2017
 
