--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -1,4 +1,6 @@
 logging_level: INFO
+detect_anomaly: false
+
 # --- Training Parameters -------------------------------------------------------
 batch_size: 256
 epochs: 30
