--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -1,5 +1,5 @@
 logging_level: INFO
-detect_anomaly: false
+detect_anomaly: False
 
 # --- Training Parameters -------------------------------------------------------
 batch_size: 256
