--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -23,8 +23,10 @@ experiment_name: mean_embedding_forecast_lstm
 clip_gradient_norm: 1
 clip_targets_to_zero:
 - streamflow
-learning_rate:
-  0: 0.0005
+learning_rate_strategy: ReduceLROnPlateau
+initial_learning_rate: 0.0005
+learning_rate_drop_factor: 0.1
+learning_rate_epochs_drop: 1
 # max_updates_per_epoch:
 max_updates_per_epoch: 2000
 metrics:
