--- a/test/test_configs/multi_timescale_regression.test.yml
+++ b/test/test_configs/multi_timescale_regression.test.yml
@@ -59,10 +59,7 @@ optimizer: Adam
 loss: MSE
 regularization:
   - tie_frequencies
-learning_rate:
-  0: 1e-3
-  10: 5e-4
-  20: 1e-4
+initial_learning_rate: 0.001
 batch_size: 256
 epochs: 1
 clip_gradient_norm: 1
