--- a/test/test_configs/transformer_daily_regression.test.yml
+++ b/test/test_configs/transformer_daily_regression.test.yml
@@ -65,8 +65,7 @@ dynamics_embedding:
 # --- Training configuration -----------------------------------------------------------------------
 optimizer: Adam
 loss: MSE
-learning_rate:
-  0: 1e-3
+initial_learning_rate: 0.001
 batch_size: 256
 epochs: 1
 clip_gradient_norm: 1
