Setup `head: cmal_deterministic` option instead of `cmal_deterministic` bool.

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -149,6 +149,7 @@ forecast_overlap: 365
 ### head ###
 loss: CMALLoss
 head: cmal
+# head: cmal_deterministic
 # loss: NSE
 # head: regression
 n_distributions: 3
