--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,20 @@
 line-length = 80
 target-version = "py312"
 
-lint.select = ["ALL"]
+
+[tool.ruff.lint]
+select = ["ALL"]
+
+ignore = [
+  # Formatter:
+  "D203",  # A blank line before class (conflicts: no-blank-line-before-class)
+  "D213",  # Summary on second line (conflicts: multi-line-summary-first-line)
+  # Linter:
+  "COM812", # Missing trailing comma
+  "Q000",   # Bad quotes (single quotes)
+  "Q003",   # Bad quotes (avoidable escaped quote)
+]
+
 
 [tool.ruff.format]
 quote-style = "single"
