Uncomment metrics other than NSE.

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -31,12 +31,12 @@ learning_rate_epochs_drop: 5
 max_updates_per_epoch: 2000
 metrics:
 - NSE
-# - KGE
-# - Alpha-NSE
-# - Beta-NSE
-# - Beta-KGE
-# - Peak-Timing
-# - Missed-Peaks
+- KGE
+- Alpha-NSE
+- Beta-NSE
+- Beta-KGE
+- Peak-Timing
+- Missed-Peaks
 num_workers: 0  # Scalene profiler works only without multiprocessing (`0`)
 optimizer: Adam
 validate_every: 5
