Disable several unneeded lint warnings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ ignore = [
   "COM812",  # Missing trailing comma
   "Q000",   # Bad quotes (single quotes)
   "Q003",   # Bad quotes (avoidable escaped quote)
+  "D413",  # Missing newline after the last section in docstrings
+  "ANN204",  # Missing return type for __init__ (None)
+  "S101",  # assert detected
+  "TRY003",  # long messages in exceptions
+  "EM101",  # Exception must not use a string literal, assign to variable first
+  "EM102",  # Exception must not use an f-string literal, assign to variable first
 ]
 
 
