--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -14,6 +14,7 @@
 
 logging_level: INFO
 detect_anomaly: False
+print_warnings_once: False
 
 # --- Training Parameters -------------------------------------------------------
 
