Add Xavier weights initialization option.

--- a/config/multimet_handoff_forecast_lstm.yml
+++ b/config/multimet_handoff_forecast_lstm.yml
@@ -41,6 +41,7 @@ predict_last_n: 8
 regularization:
 - forecast_overlap
 log_loss_every_nth_update: 8
+use_xavier_init: False
  
 # --- Dataset Parameters --------------------------------------------------------
 train_basin_file: ~/flood-forecasting/config/basins/caravan_3_basins.txt
