Fix lazy mode to work more efficiently (sample by sample for now).

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -15,6 +15,9 @@
 logging_level: INFO
 detect_anomaly: False
 print_warnings_once: False
+lazy_memory:
+  enabled: False
+  cache_bytes: 16000000000
 
 # --- Training Parameters -------------------------------------------------------
 
