--- a/config/multimet_handoff_forecast_lstm.yml
+++ b/config/multimet_handoff_forecast_lstm.yml
@@ -12,8 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+logging_level: DEBUG
+detect_anomaly: False
+print_warnings_once: False
+lazy_memory:
+  enabled: False
+  cache_bytes: 16000000000
+
 # --- Training Parameters -------------------------------------------------------
-batch_size: 256
+batch_size: 32
 epochs: 30
 experiment_name: multimet_handoff_forecast_lstm
 clip_gradient_norm: 1
@@ -49,10 +56,10 @@ validation_basin_file: ~/flood-forecasting/config/basins/caravan_3_basins.txt
 test_basin_file: ~/flood-forecasting/config/basins/caravan_3_basins.txt
 
 train_end_date: 30/09/2017
-train_start_date: 01/10/2012
-validation_end_date: 30/09/2022
-validation_start_date: 01/10/2017
-test_end_date: 30/09/2022
+train_start_date: 01/01/2017
+validation_end_date: 30/09/2018
+validation_start_date: 01/01/2018
+test_end_date: 30/09/2018
 test_start_date: 01/10/2017
 
 targets_data_dir: ~/nh-data/data/Caravan-nc # Point to your local path. Must be read locally.
