--- a/config/multimet_handoff_forecast_lstm.yml
+++ b/config/multimet_handoff_forecast_lstm.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-logging_level: DEBUG
+logging_level: INFO
 detect_anomaly: False
 print_warnings_once: False
 lazy_memory:
