--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -49,7 +49,7 @@ allzero_samples_are_invalid: False
 weight_init_opts:
 cache:
   enabled: False
-  byte_limit: 2 * 10**9  # in GB
+  byte_limit: 2000000000  # in GB
 
 # --- Dataset Parameters --------------------------------------------------------
 
