Control by config.

--- a/config/multimet_mean_embedding_forecast_lstm.yml
+++ b/config/multimet_mean_embedding_forecast_lstm.yml
@@ -53,6 +53,7 @@ weight_init_opts:
 cache:
   enabled: False
   byte_limit: 2000000000  # in GB
+use_swap_memory:
 
 # --- Dataset Parameters --------------------------------------------------------
 
