--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,6 +20,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  apt_packages:
+    - pandoc
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -30,3 +32,5 @@ sphinx:
 python:
   install:
   - requirements: environments/rtd_requirements.txt
+  - method: pip
+    path: .
