--- a/tutorial/configs/train-config.yml
+++ b/tutorial/configs/train-config.yml
@@ -217,7 +217,7 @@ epochs: 15
 batch_size: 256
 # Maximum number of weight updates per epoch (useful for very large datasets).
 # Leave empty to use all training data for each epoch.
-max_updates_per_epoch: 
+max_updates_per_epoch: -1 
 
 # -- Learning Rate Scheduler --
 # Adjusts the learning rate during training to improve convergence.
