--- a/example-configs/camels-multimet-mean-embedding-forecast-lstm-config.yml
+++ b/example-configs/camels-multimet-mean-embedding-forecast-lstm-config.yml
@@ -48,14 +48,14 @@ dataset: multimet
 
 # -- File Paths --
 # Paths to text files containing lists of basin IDs for training, validation, and testing.
-train_basin_file: ~/flood-forecasting/example-configs/camels-basin-list.txt
-validation_basin_file: ~/flood-forecasting/example-configs/camels-basin-list.txt
-test_basin_file: ~/flood-forecasting/example-configs/camels-basin-list.txt
+train_basin_file: ~/flood-forecasting/example-configs/camels-basins-list.txt
+validation_basin_file: ~/flood-forecasting/example-configs/camels-basins-list.txt
+test_basin_file: ~/flood-forecasting/example-configs/camels-basins-list.txt
 
 # Directory containing the target data (streamflow observations).
-targets_data_dir: 
+targets_data_dir: ~/data/camels-updated-2025
 # Directory containing static catchment attributes (e.g., area, elevation).
-statics_data_dir: 
+statics_data_dir: ~/data/camels-updated-2025
 # Directory containing dynamic meteorological forcing data (rain, temp, etc.).
 dynamics_data_dir: gs://caravan-multimet/v1.1
 
@@ -156,6 +156,9 @@ loss: CMALLoss
 n_distributions: 3
 n_samples: 7500
 negative_sample_handling: clip
+
+# The optimization algorithm.
+optimizer: Adam
 
 # Prediction window and temporal settings.
 seq_length: 365
