--- a/example-configs/camels-multimet-mean-embedding-forecast-lstm-config.yml
+++ b/example-configs/camels-multimet-mean-embedding-forecast-lstm-config.yml
@@ -57,7 +57,7 @@ targets_data_dir: ~/data/camels-updated-2025
 # Directory containing static catchment attributes (e.g., area, elevation).
 statics_data_dir: ~/data/camels-updated-2025
 # Directory containing dynamic meteorological forcing data (rain, temp, etc.).
-dynamics_data_dir: gs://caravan-multimet/v1.1
+dynamics_data_dir: ~/data/camels-updated-2025
 
 # Loading from CSV is slower; usually False for NetCDF workflows.
 load_as_csv: False
