[low memory mode] Add `lazy_data` mode (`False` by default).
* When disabled, dataset is materialized into memory. DataLoader batches data without computing it since it's already pre-computed as to not double memory usage.
* When enabled, dataset isn't materialized into memory. First, scaler and indices are computed. Second, dataset's graph-only object is scaled. Then DataLoader batches data and `compute()`s per batch.

Added a custom DataLoader to batchify on batch sampler. It also now handles tensor conversion and collating instead of those being in different places in trainer and tester.

Noting further opts:
* Required: Build a new dataset (Multimet) every epoc from a random basin set. For tester, defines batch/sliding window as it needs to go over everything in contrast. This is needed to further limit memory, especially for the sample index construction, and runtime (per epoc).
* Consider converting to tensors post collation to save memory instead of prior. It copies everything twice now. Perhaps the getitems vectorized batch getter may do this work instead, to output tensors right away, or check just if reversing order is possible first.
* Dataset to return a batch (getitems). Else we get e.g. 512 different graph computations in parallel, and initially making them takes time in blocking python code: each item is a dict of arrays or nested dicts of arrays. Continuous numpy (C) array structures for all samples together will save lots of runtime and memory: one graph instead of 512 (heavy) graphs.
* Minor: getitem should access `self._sample_index[item]` once instead of in separate in each helper. The dict creates dicts from the large indices array taking some duplicated memory all to throw right away. It may also help from a memory locality stance or cpu/memory caches because the indices array is huge, it may get other local things out of cache.

--- a/example-configs/camels-multimet-handoff-forecast-lstm-config.yml
+++ b/example-configs/camels-multimet-handoff-forecast-lstm-config.yml
@@ -45,6 +45,7 @@ print_warnings_once: False
 
 # Specifies the class of dataset loader to use.
 dataset: multimet
+lazy_data: False
 
 # -- File Paths --
 # Paths to text files containing lists of basin IDs for training, validation, and testing.
